--- a/Aplicacion/Presentacion/RecuperosYMandatos/Web.config
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Web.config
@@ -64,6 +64,6 @@
     </compilers>
   </system.codedom>
 		<connectionStrings>
-			<add name="RecuperosYMandatos" connectionString="data source=localhost;Initial Catalog=RecuperosYMandatos_V01;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+			<add name="RecuperosYMandatos" connectionString="data source=DESKTOP-TB94ONU;Initial Catalog=RecuperosYMandatos_V01;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 		</connectionStrings>
 </configuration>
